Major refactoring - refactor MFDevice, Port and Engine classes to better use interfaces, base classes and generics allowing reuse and implement new device types - refactor several wire protocol classes - rework example

--- a/source/Debug Library/Debug Library.csproj
+++ b/source/Debug Library/Debug Library.csproj
@@ -110,10 +110,11 @@
     <Compile Include="DebuggerEventSource.cs" />
     <Compile Include="Extensions\CancellationTokenExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="MFDevice\MFDeviceBase.cs" />
     <Compile Include="MFDevice\IMFDevice.cs" />
     <Compile Include="MFDevice\MFDevice.cs" />
     <Compile Include="PortDefinitions\IPort.cs" />
-    <Compile Include="PortDefinitions\Port.cs" />
+    <Compile Include="PortDefinitions\PortBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\ReflectionDefinition.cs" />
     <Compile Include="Runtime\RunTimeValue.cs" />
