Add extension to output memory map in a frindly string

--- a/source/Debug Library/Debug Library.csproj
+++ b/source/Debug Library/Debug Library.csproj
@@ -109,6 +109,7 @@
     <Compile Include="CRC32.cs" />
     <Compile Include="DebuggerEventSource.cs" />
     <Compile Include="Extensions\CancellationTokenExtensions.cs" />
+    <Compile Include="Extensions\OutputExtensions.cs" />
     <Compile Include="Extensions\TypeExtensions.cs" />
     <Compile Include="MFDevice\MFDeviceBase.cs" />
     <Compile Include="MFDevice\IMFDevice.cs" />
