Improve implementation of spurious chars reception and forwarding

--- a/source/Debug Library/Debug Library.csproj
+++ b/source/Debug Library/Debug Library.csproj
@@ -149,6 +149,7 @@
     <Compile Include="WireProtocol\ControllerBase.cs" />
     <Compile Include="WireProtocol\Converter.cs" />
     <Compile Include="WireProtocol\Engine.cs" />
+    <Compile Include="WireProtocol\FifoBuffer.cs" />
     <Compile Include="WireProtocol\RebootTime.cs" />
     <Compile Include="WireProtocol\PublicKeyIndex.cs" />
     <Compile Include="WireProtocol\Flags.cs" />
