Add test code and files to call DeployAsync

--- a/source/USB Test App UWP/USB Test App UWP.csproj
+++ b/source/USB Test App UWP/USB Test App UWP.csproj
@@ -92,6 +92,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="ER_CONFIG" />
+    <None Include="ER_CONFIG.sig" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
